--- a/gb/21/6/22/n13038188.md
+++ b/gb/21/6/22/n13038188.md
@@ -1,65 +1,55 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/crzlhp3279/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/crzlhp3279/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/crzlhp3279/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/crzlhp3279/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/crzlhp3279/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/crzlhp3279/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>迷路鹦鹉叩窗求救  员警惊叹：真有灵性</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13038191-503586-600x400.jpg" />
-<h6>员警发现小鹦鹉脚上还系着金属环和一把钥匙，于是联系辖区里长协寻。（台中市警局提供）
-</h6>
-<hr>
-<p>【大纪元2021年06月22日讯】（大纪元记者黄玉燕台湾台中报导）超有<ahref="https://github.com/crzlhp3279/djy/blob/master/gb/tag/%E7%81%B5%E6%80%A7.md#1">灵性</a>！早晨7点，台中大里区十九甲派出所，飞来一只“逃家<ahref="https://github.com/crzlhp3279/djy/blob/master/gb/tag/%E9%B9%A6%E9%B9%89.md#1">鹦鹉</a>”要报案，让员警惊呼连连，这鹦鹉里面“好像住着一个人”，太有<ahref="https://github.com/crzlhp3279/djy/blob/master/gb/tag/%E7%81%B5%E6%80%A7.md#1">灵性</a>了！</p>
-<figure id="13038192" aria-describedby="caption-13038192" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/06/id13038192-503587-450x831.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/06/id13038192-503587-450x831.jpg" alt="脸书社团“大里人聊天室”，失主陈先生贴文说，宠物鹦鹉飞走了! " width="500" /></a><figcaption id="caption-13038192" class="wp-caption-text">脸书社团“大里人聊天室”，失主陈先生贴文说，宠物<ahref="https://github.com/crzlhp3279/djy/blob/master/gb/tag/%E9%B9%A6%E9%B9%89.md#1">鹦鹉</a>飞走了! （台中市<ahref="https://github.com/crzlhp3279/djy/blob/master/gb/tag/%E8%AD%A6%E5%B1%80.md#1">警局</a>提供）</figcaption></figure>
-<p>6月18日早晨7点多，雾峰分局十九甲派出所门前，飞来一只缤纷艳丽的小鹦鹉，用头轻轻撞击派出所的窗户玻璃，发出的声响，让警员刘谨先与赖冠维都听到了声音；员警说，一开始以为是有民众需要协助，到门口一看，才发现来报案的竟是一只鹦鹉！</p>
-<p>员警研判，市区罕见野生鹦鹉，且小鹦鹉脚上还系着金属环和一把钥匙，于是主动联系辖区里长，询问有无遗失宠物鹦鹉的讯息，不久就在脸书社团“大里人聊天室”找到了！ 原来日前就有民众贴文说，宠物鹦鹉飞走了!?失主陈先生至派出所认领小鹦鹉，十分感谢警方协助找回宠物。</p>
-<p>员警回想鹦鹉报案过程都非常惊叹，这只鹦鹉里面“好像住着一个人”，逃家那么久，迷路想回家，就懂得飞到派出所来找警察帮忙，而且还很有个性，要查看它的脚环时，还差点被它啄伤，像极了发脾气的小孩子。</p>
-<figure id="13038193" aria-describedby="caption-13038193" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/06/id13038193-503588-450x306.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/06/id13038193-503588-450x306.jpg" alt="失主陈先生至派出所认领小鹦鹉，十分感谢警方协助找回宠物。" width="500" /></a><figcaption id="caption-13038193" class="wp-caption-text">失主陈先生至派出所认领小鹦鹉，十分感谢警方协助找回宠物。（台中市<ahref="https://github.com/crzlhp3279/djy/blob/master/gb/tag/%E8%AD%A6%E5%B1%80.md#1">警局</a>提供）</figcaption></figure>
-<p>雾峰分局长陈家铭呼吁，民众拾获游荡在外、无家可归的动物属善事一桩，不过，警察机关未具有动物保护专业知能与空间设备，很难收容及处置；如民众有拾获活体动物时，仍应依“动物保护法”第14条规定，送交各辖区动物保护部门或委托民间动物收容处所等办理。◇</p>
-<p>责任编辑：李悦</p>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
 
+<h6></h6>
+<hr>[replace]（<a href=<ahref;<a href=<ahref;"https://www.epochtimes.com/gb/2=><a href="https://github.com/hxcaik307/djy/blob/master/gb/2;  = ;		= ;script=a;http://cn.epochtimes.com/gb/=https://github.com/hxcaik307/djy/blob/master/gb/;http://www.epochtimes.com/gb/=https://github.com/hxcaik307/djy/blob/master/gb/;https://www.epochtimes.com/gb/=https://github.com/hxcaik307/djy/blob/master/gb/;.html=.md#1;.htm=.md#1;" height=" b;/i6/=https://www.epochtimes.com/i6/;<iframe=<a;/iframe>=/a>
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/8/1/2/n1962161.md#1">英男子心脏病发  宠物鹦鹉打电话求救</a></li>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/15/4/21/n4416249.md#1">美国一住宅失火 家中鹦鹉大喊“救命”</a></li>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/17/11/15/n9844624.md#1">快递员送货听到屋内女子求救 警方破门后傻眼</a></li>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/3/5/n10192485.md#1">这只鹦鹉不仅会唱歌 它的高音会令人怀疑人生</a></li>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/6/6/n10459342.md#1">这是谋杀吧？鹦鹉享受猫大哥暖心拍头 下一秒跪地求饶</a></li>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/7/9/n10548191.md#1">金刚鹦鹉流浪到警局 惊艳暖警找回主人</a></li>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/21/6/21/n13036794.md#1">台中疑增5例打疫苗亡 市府启动救助专案</a></li>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/21/6/21/n13036732.md#1">北农确诊45人 中市争取七大批发市场打疫苗</a></li>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/21/6/21/n13036416.md#1">弘光美发远距教学 作品登上国际平台</a></li>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/21/6/21/n13036382.md#1">台中免试入学改采线上 建议填满50志愿</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/9/9/n4244040.md#1">松鼠肇祸电线断  台铁近3小时修复</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/9/18/n4251538.md#1">火车撞水泥块  误点近八千人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/1/5/n8669890.md#1">台湾高铁通车10年 民众实现“一日生活圈”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/29/n10815778.md#1">列车长发千字文 揭台铁人、车、路弊端</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/24/n12426517.md#1">赏台湾设计展住新竹一晚 超值好康等你拿</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/1/11/n12680504.md#1">竹竹苗区域观光联盟大会师 2021台湾灯会顺游竹竹苗</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/3/31/n12848393.md#1">竹市儿艺节接驳点、交通管制路段一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/5/n13417651.md#1">苗县农会农村社区小铺 开幕揭牌</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/3/n13414890.md#1">黑蝙蝠中队70周年庆 特展揭参与越战秘辛</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/3/n13414550.md#1">苗县校园倡反烟拒槟 国中校长签署健康公约</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/crzlhp3279/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/3/n10112268.md#1" target="_blank">林辉：红色公主的大字报让军报少将家破人亡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/17/n11800547.md#1" target="_blank">新年集体炼功交流 法轮功修炼者遍及俄罗斯</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/4/n10361532.md#1" target="_blank">周晓辉：恩格斯资助马克思并为其顶包背后</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/17/n10916061.md#1" target="_blank">同化真善忍 一位澳洲人寻获的幸福人生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/15/n13022866.md#1">女子年幼时“溺毙” 感悟自己曾是高层生命</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/11/n13016050.md#1">【未解之谜】亚特兰大石头山</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/6/n13002603.md#1">才华耀世的苏轼小时候改了老师的诗 师也自叹不如</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/14/n13021756.md#1">【小宇宙传说】巨人现身？世界各地的巨大脚印</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/10/n13011671.md#1">一代风流才子袁枚的四世人生 悔不当初转生改过</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/19/n13033482.md#1">【时事军事】中共空军J-20 的真面目</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/21/n13037499.md#1">【重播】美副防长参加第六届国防科技峰会</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/21/n13036845.md#1">【新闻大家谈】邱香果“消失”引爆加国舆论</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/18/n13032045.md#1">【横河观点】董经纬两个报导 哪个是真的？</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/19/n13032472.md#1">【拍案惊奇】台山核泄发酵之际 核电专家突跳楼</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/8/n13008518.md#1">【独家】中共用“学习”洗脑 民众无声抵抗</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/20/n13035251.md#1">相识冯德伦20年才结婚 舒淇曝逗趣原因秀恩爱</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/20/n13034434.md#1">贾永婕花百万再捐呼吸防护具 保护医护安全</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/20/n13035598.md#1">田亮晒照庆父亲节 幽默感谢儿女继承他的美貌</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/18/n13031768.md#1">侯昌明夫妇做50个便当送医护 亲自下厨网赞爆</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/21/n13036041.md#1">TWICE迷你十辑登Billboard 200榜第6名 新歌创佳绩</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/17/n13029709.md#1">一周瘦2公斤、血糖快速降 三餐不减量减肥秘诀</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/20/n13034080.md#1">被小狗从湖中救起 小鹿隔天前来道谢</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/20/n13034183.md#1">英国外海出现“漂浮的城市” 神秘感十足</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/19/n13033103.md#1">【重播】疫苗是防重症还是防感染？</a></li>
-<li><a href="https://github.com/nqpxzh3009/djy/blob/master/gb/21/6/20/n13034296.md#1">海水很咸 喝了会发生什么事？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/crzlhp3279/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/crzlhp3279/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/22/n13038188.htm">迷路鹦鹉叩窗求救  员警惊叹：真有灵性</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/22/n13038188.htm"></a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/crzlhp3279/djy/blob/master/gb/21/6/22/n13038188.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/crzlhp3279/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/crzlhp3279/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crzlhp3279/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crzlhp3279/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crzlhp3279/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/6/22/n13038188.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
